# register-ai-agent

./: _clean.sh  add_agent.json  aigw-cli.sh  cybr-sai-client.py  demo-vars.sh  pyproject.toml  register-agent.sh  test.sh  update_agent.json
gen-api-package/: CyberArk-sai-api.json
