[project]
name = "register-ai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "attrs>=25.4.0",
    "httpx>=0.28.1",
    "python-dateutil>=2.9.0.post0",
    "requests>=2.32.5",
    "secure-ai-api-client",
]

[tool.uv.sources]
secure-ai-api-client = { path = "secure_ai_api_client" }
